# byzanz

./: .gitignore  configure.ac
gifenc/: gifenc.c  quantize.c
po/: cs.po  de.po  es.po  fi.po  pl.po  pt.po  pt_BR.po  sl.po  sr.po  sr@latin.po  tr.po
src/: Makefile.am  byzanz-record.1  byzanzapplet.c  byzanzencoderflv.c  byzanzencodergif.c  byzanzencodergstreamer.c  byzanzencoderogv.c  byzanzencoderwebm.c  byzanzlayer.c  byzanzlayercursor.c  byzanzlayercursor.h  byzanzlayerwindow.c  byzanzrecorder.c  paneltogglebutton.c  playback.c  record.c
